--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,8 @@
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }} {{ site.title-separator }} {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
+  <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico">
+
   {% include gtm_head.html %}
 
   {% if layout.common-ext-css %}
