Small fixes, added missing images

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,21 @@ layout: null
 
 /* --- General --- */
 
+def {
+  color: green;
+}
+
+fun {
+  font-family: "Courier New", Courier, monospace;
+  color: #822;
+}
+
+var {
+  font-style: normal;
+  font-family: "Courier New", Courier, monospace;
+  color: #227;
+}
+
 span.def {
   color: green;
 }
