--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,11 @@ img.left {
   margin-left: 20px;
 }
 
+img.center {
+  margin: 0 auto;
+  display: block;
+}
+
 .center-image {
     margin: 0 auto;
     display: block;
@@ -70,6 +75,12 @@ img.left {
 video {
   max-width: 100%;
   height: auto;
+}
+
+audio {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
