Publications page update

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,6 +4,7 @@ common-css:
   - "/css/bootstrap-social.css"
   - "/css/main.css"
   - "/css/lightbox.css"
+  - "/js/bibtex_js.js"
 common-ext-css:
   - "//maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css"
 common-googlefonts:
@@ -14,6 +15,7 @@ common-js:
   - "/js/bootstrap.min.js"
   - "/js/main.js"
   - "/js/lightbox.js"
+  - "/js/bibtex_js.js"
 ---
 
 <!DOCTYPE html>
